// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/avatar/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-row"
  >
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-circle ant-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-sm ant-avatar-circle ant-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-row"
  >
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-square ant-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-square ant-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-sm ant-avatar-square ant-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/avatar/demo/type.md correctly 1`] = `
<div>
  <div
    class="ant-row"
  >
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-circle"
      >
        U
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-image"
      >
        <img
          src="https://os.alipayobjects.com/rmsportal/mgesTPFxodmIwpi.png"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-row"
  >
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-circle"
        style="color:#f56a00;background-color:#fde3cf;"
      >
        U
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon"
        style="background-color:#87d068;"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
  </div>
</div>
`;
